# okapi

./: .bazelrc  .gitignore  readme.md
bzl/: deps.bzl  setup.bzl
example/project-1/: WORKSPACE.bazel  bazel-bin  bazel-out  bazel-project-1  bazel-testlogs
example/project-1/a/sub/: BUILD.bazel
lang/: deps.go  dune.go  library.go
