load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_lex", "ocaml_module", "ocaml_ns_archive", "ocaml_signature", "ppx_executable", "ppx_module", "ppx_ns_archive")

ocaml_module(
    name = "final",
    opts = [
        "-open",
        "Angstrom",
    ],
    struct = ":final.ml",
    deps = [
        "@opam//lib/angstrom",
        "@opam//lib/ipaddr",
        "@opam//lib/re",
    ],
)

ocaml_lex(
    name = "lexy_ml",
    src = ":lexy.mll",
    out = ":lexy.ml",
)

ocaml_module(
    name = "lexy",
    opts = [
        "-w",
        "-39",
    ],
    struct = ":lexy_ml",
    deps = [
        "@opam//lib/angstrom",
        "@opam//lib/ipaddr",
        "@opam//lib/re",
    ],
)

ocaml_signature(
    name = "new__sig",
    src = ":new.mli",
    opts = [
        "-open",
        "Angstrom",
    ],
    deps = [
        "@opam//lib/angstrom",
        "@opam//lib/ipaddr",
        "@opam//lib/re",
    ],
)

ocaml_module(
    name = "new",
    opts = [
        "-open",
        "Angstrom",
    ],
    sig = ":new__sig",
    struct = ":new.ml",
    deps = [
        "@opam//lib/angstrom",
        "@opam//lib/ipaddr",
        "@opam//lib/re",
    ],
)

ocaml_module(
    name = "sub",
    opts = [
        "-open",
        "Angstrom",
    ],
    struct = ":sub.ml",
    deps = [
        "@opam//lib/angstrom",
        "@opam//lib/ipaddr",
        "@opam//lib/re",
    ],
)

# okapi:auto
# okapi:public_name sub-lib
ocaml_ns_archive(
    name = "#Sub_lib",
    submodules = [
        ":final",
        ":new",
        ":sub",
    ],
    visibility = ["//visibility:public"],
)

ppx_executable(
    name = "ppx_sub_extra_lib",
    deps_opam = ["ppx_inline_test"],
    main = "@obazl_rules_ocaml//dsl:ppx_driver",
)

ppx_module(
    name = "bar",
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    struct = ":bar.ml",
    deps = [
        "@okapi-test//a:#A",
        "@opam//lib/ppx_inline_test",
        "@opam//lib/virt",
    ],
)

ocaml_signature(
    name = "foo__sig",
    src = ":foo.mli",
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    deps = [
        ":bar",
        "@okapi-test//a:#A",
        "@opam//lib/ppx_inline_test",
        "@opam//lib/virt",
    ],
)

ppx_module(
    name = "foo",
    ppx = ":ppx_sub_extra_lib",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    sig = ":foo__sig",
    struct = ":foo.ml",
    deps = [
        ":bar",
        "@okapi-test//a:#A",
        "@opam//lib/ppx_inline_test",
        "@opam//lib/virt",
    ],
)

# okapi:public_name sub-extra-lib
ppx_ns_archive(
    name = "#Sub_extra_lib",
    submodules = [
        ":bar",
        ":foo",
    ],
    visibility = ["//visibility:public"],
)
